--- a/employees/src/main/resources/application.properties
+++ b/employees/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://mydb.cbnh5sastzde.us-east-2.rds.amazonaws.com:3306/mydb
+jdbc.url = jdbc:mysql://mydb.c3ypl4ezcpiy.us-east-2.rds.amazonaws.com
 jdbc.username = root
-jdbc.password = Mysql123!
+jdbc.password = admin123
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
