--- a/employees/src/main/resources/application.properties
+++ b/employees/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://mydb.c3ypl4ezcpiy.us-east-2.rds.amazonaws.com
+jdbc.url = jdbc:mysql://mydb.c3ypl4ezcpiy.us-east-2.rds.amazonaws.com:3306/mydb
 jdbc.username = root
 jdbc.password = admin123
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
